--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ name = "python-depends"
 packages = [
     { include="depends", from="." }
 ]
-version = "0.1.2"
-description = "A dependency injector as in FastAPI"
+version = "0.1.3"
+description = "A FastAPI like dependency injector"
 repository = "https://github.com/Dimfred/depends.git"
 homepage = "https://github.com/Dimfred/depends"
 license = "MIT"
